examples/fail/equation1.niu
fn main() -> void {
  let a = 1;
  if a {
    let b = 2;
  }
}
